feat: open auth
